# skills

./: .gitignore  README.md
ocfl/: README.md  SKILL.md  config.toml  pyproject.toml  wizard.py
ocfl/forms/: fence_permit_checklist.md
ocfl/scripts/: ocfl
